Fix overflow issue.

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -20,6 +20,7 @@ body
   padding: 0 0 100px
   min-height: 100%
   text-align: center
+  overflow-x: hidden
 
 header,
 section,
